refactoring new bck colour

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
-  background-color: #1b70a8;
+  background-color: #0e0303;
   /* background-color: #60b347; */
 }
 
@@ -27,7 +27,7 @@ header {
 
 main {
   height: 65vh;
-  color: #eee;
+  color: #eeeeee;
   display: flex;
   align-items: center;
   justify-content: space-around;
